deploy_new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
  labels:
    app: spring-deployment
spec:
  selector:
    matchLabels:
      app: spring-deploy
  template:
    metadata:
      labels:
        app: spring-deploy
    spec:
      containers:
      - name: spring-deploy-app
        image: db42/hellospring:desafio3-4 
        ports:
        - containerPort: 8090

---

kind: Service
apiVersion: v1
metadata:
  name: spring-service
spec:
  type: NodePort
  selector:
    app: spring-deploy
  ports:
  - port: 8090
    nodePort: 30005
    targetPort: 8090
    protocol: TCP
