deploy_nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellospring-deployment
  labels:
    app: hello-spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-spring
  template:
    metadata:
      labels:
        app: hello-spring
    spec:
      containers:
      - name: hello-spring
        image: db42/hellospring:desafio3-4
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: springapp
spec:
  type: NodePort
  ports:
    - port: 3001
      nodePort: 30011
  selector:
    app: springapp
