deploy_spring.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellospring
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hellospring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellospring-deployment
  labels:
    role: hellospring
spec:
  replicas: 2
  selector:
    matchLabels:
      role: hellospring
  template:
    metadata:
      labels:
        role: hellospring
    spec:
      containers:
      - name: hellospring
        image: "db42/hellospring:desafio3-4"
        resources:
          requests:
            cpu: 100m
