deploy_ingress_new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: spring-app
  name: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: spring-app
  template:
    metadata:
      labels:
        run: spring-app
    spec:
      containers:
      - name: spring-app
        image: db42/hellospring:desafio3-4
        ports:
        - containerPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: spring-app
  name: spring-app
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "roundrobin"
spec:
  type: NodePort
  selector:
    run: spring-app
  ports:
  - name: http
    port: 8090
    targetPort: 8090
    nodePort: 30100
    protocol: TCP

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spring-app-ingress
  namespace: default
spec:
  rules:
  - host: desafio.spring
    http:
      paths:
      - path: 
        backend:
          serviceName: spring-app
          servicePort: 8090
