ingress2_hellospring.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hellospring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
    paths:
    - path: /testpath
      backend:
        serviceName: hellospringsvc
        servicePort: 8090
