ingress3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx # aquí estamos definir que tipo de ingress class vamos utilizado
spec:
  rules:
    - http:
        paths:
        - path: / # path da aplicação
          backend:
            serviceName: hello-svc # nome do service da aplicação
            servicePort: 8090
