ingress3_hellospring.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hellospring-ingress
spec:
  rules:
  - http: 
    paths:
      backend:
        serviceName: hellospringsvc
        servicePort: 80
