ingress_single.yaml
# apiVersion: k8s.nginx.org/v1
# kind: VirtualServer
# metadata:
#   name: hellospring
# spec:
#   host: hellospring
#   tls:
#     secret: hellospring-secret
#   upstreams:
#   - name: hellospring
#     service: hellospring-svc
#     port: 80
#   routes:
#   - path: /
#     action:
#       pass: hellospring

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 104.248.3.240
    http:
      paths:
      - backend:
          serviceName: hellospring
          servicePort: 80
