ingressnew.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingressnew
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: springsvc
          servicePort: 8090
